tests/build/fail/widget/module_path_missing_crate.stderr
error: expected a macro_rules `$crate` path to this widget mod
 --> $DIR/module_path_missing_crate.rs:4:11
  |
4 | #[widget2(widget)]
  |           ^^^^^^
